Revert "Merge pull request #43332 from code-dot-org/fix-logo-spacing-with-other-languages"
This reverts commit d6e643accbef7ab0b3684b7a5092c28faa1bc587, reversing
changes made to 25012f4f9caad872c21316b84395d7daf177e96b.

--- a/shared/css/header.scss
+++ b/shared/css/header.scss
@@ -22,6 +22,7 @@
 
     .content {
       width: 100%;
+      padding: 0 10px;
       overflow: visible;
       box-sizing: border-box;
     }
@@ -40,12 +41,13 @@
 
     #logo-wrapper {
       display: inline-block;
-      padding: 4px 16px;
+      padding: 4px 0 4px 16px;
       float: left;
 
       #logo {
         width: 42px;
         height: 42px;
+        margin-left: 5px;
       }
 
       #logo-uk {
